--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 
 // Import CoreUI styles
 @import "~@coreui/coreui-pro/scss/coreui.scss";
+@import "~react-responsive-modal/styles.css";
 
 // If you want to add something do it here
 @import "custom";
