Add route planner layout

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,1 +1,14 @@
 // Variable overrides
+
+$toggle-height: 22px;
+$layout-height: 800px;
+
+// Variable fonts
+$xl-font-size: 18px;
+$lg-font-size: 16px;
+$md-font-size: 14px;
+$sm-font-size: 12px;
+$xs-font-size: 10px;
+
+// Variable colors
+$black: #000000;
