--- a/src/views/forms/address-form/address-form.scss
+++ b/src/views/forms/address-form/address-form.scss
@@ -5,6 +5,7 @@
     min-height: 1rem;
     display: flex;
     flex-direction: column-reverse;
+    white-space: nowrap;
   }
 
   .stop-label {
@@ -21,7 +22,7 @@
     position: relative;
 
     span {
-      margin: auto;
+      margin-right: auto;
     }
   }
 }
