Add cleanups to styles

--- a/src/views/forms/address-form/address-form.scss
+++ b/src/views/forms/address-form/address-form.scss
@@ -1,6 +1,7 @@
 @import "../../../scss/variables.scss";
 
 .address-form {
+  min-width: $min-layout-width;
   label {
     min-height: 1rem;
     display: flex;
