--- a/src/views/route-planner/configuration/configuration.scss
+++ b/src/views/route-planner/configuration/configuration.scss
@@ -15,6 +15,19 @@
       white-space: nowrap;
     }
   }
+
+  .address-table-card {
+    overflow: auto;
+
+    .data-table {
+      min-width: $min-layout-width;
+
+      .table-responsive {
+        width: auto;
+        overflow-x: initial;
+      }
+    }
+  }
 }
 
 .nav-tabs .nav-link.active {
