--- a/src/views/route-planner/route-planner.scss
+++ b/src/views/route-planner/route-planner.scss
@@ -6,6 +6,7 @@
 
   .set-end-address {
     height: $toggle-height;
+    min-width: $min-layout-width;
 
     span {
       line-height: $toggle-height;
@@ -20,8 +21,10 @@
 }
 
 // overrides golden layouts
-.lm_header {
-  display: none;
+@media only screen and (min-width: 992px) {
+  .lm_header {
+    display: none;
+  }
 }
 
 .lm_content {
