--- a/src/views/route-planner/configuration/configuration.scss
+++ b/src/views/route-planner/configuration/configuration.scss
@@ -24,7 +24,8 @@
 
       .table-responsive {
         width: auto;
-        overflow-x: initial;
+        overflow-x: auto;
+        margin-bottom: 1rem;
       }
     }
   }
