Add popover instead of modal

--- a/src/views/route-planner/configuration/configuration.scss
+++ b/src/views/route-planner/configuration/configuration.scss
@@ -27,6 +27,10 @@
         overflow-x: auto;
         margin-bottom: 1rem;
       }
+
+      .pagination {
+        justify-content: flex-end !important;
+      }
     }
   }
 }
