Added tab for inaccurate addresses and fixed address table issue

--- a/src/views/route-planner/configuration/configuration.scss
+++ b/src/views/route-planner/configuration/configuration.scss
@@ -27,6 +27,10 @@
         background: $danger;
         color: $white;
       }
+      &.inaccurate {
+        background: $warning;
+        color: $white;
+      }
     }
   }
 
